fixed some issues

--- a/css/game.css
+++ b/css/game.css
@@ -2,7 +2,7 @@
     display: flex;
     margin-bottom: 0.5em;
     width: 100%;
-    font-size: 1.8rem;
+    font-size: 1rem;
     border: 0.1rem solid □rgb(86, 165, 235, 0.25);
     background-color: white;
     }
@@ -22,4 +22,15 @@
     
     .choice-text {
     padding: 1.5rem;
+    width: 100%
+    }
+
+    .incorrect {
+        background-color: red;
+        color: white;
+    }
+
+    .correct {
+        background-color: green;
+        color: white;
     }
