--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ h1 > span {
 }
 
 h2 {
-    font-size: 4.2rem;
+    font-size: 2.5rem;
     font-weight: 700;
     margin-bottom: 4rem;
 }
@@ -48,7 +48,8 @@ h3 {
     justify-content: center;
     align-items: center;
     max-width: 80rem;
-    margin: 0 auto
+    margin: 0 auto;
+    padding: 2rem;
 }
 
 .container > * {
